tests/Errors/Generic/CodeAnalysis/EmptyStatement/DetectedElse.php
<?php

declare(strict_types=1);

if (false) {
    echo 'Not true!';
} else {
}
